# easy-claw

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.json.example  docker-compose.yml  main.py  pyproject.toml  readme.nanobot.md  requirements.txt  run.sh
docs/: CHANNEL_PLUGIN_GUIDE.md  MY_TOOL.md
examples/: usage_examples.py
nanobot/: __init__.py  nanobot.py
nanobot/agent/: autocompact.py  context.py  evaluator.py  hook.py  loop.py  memory.py  planner.py  runner.py  search_planner.py  skill_autogen.py  skills.py  subagent.py  task_persistence.py
nanobot/api/: server.py
nanobot/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  msteams.py  qq.py  slack.py  telegram.py  wecom.py  weixin.py  whatsapp.py
nanobot/cli/: commands.py  stream.py
nanobot/command/: builtin.py  router.py
nanobot/config/: loader.py  schema.py
nanobot/cron/: types.py
nanobot/heartbeat/: service.py
nanobot/providers/: anthropic_provider.py  base.py  openai_compat_provider.py  registry.py  transcription.py
nanobot/session/: manager.py
nanobot/skills/: README.md
nanobot/templates/: SOUL.md
nanobot/utils/: __init__.py  document.py  gitstore.py  helpers.py  runtime.py  tool_hints.py
prompts/default/: planning_complexity.txt  planning_plan.txt  planning_replan.txt  react_step.txt  react_system.txt  reasoning_decision.txt  summarization.txt  system.txt
skills/code_executor/: executor.py  skill.yaml
skills/file_processor/: processor.py  skill.yaml
src/tir_agent/: agent.py  (+4 more)
tests/: test_api_stream.py  test_msteams.py
(+83 files in other folders)
